Closed Bug 1742796 Opened 2 years ago Closed 2 years ago

Poor contrast with dark mode selection colors.

Categories

(Core :: Widget, defect)

defect

Tracking

()

VERIFIED FIXED
96 Branch
Tracking Status
firefox96 --- verified

People

(Reporter: emilio, Assigned: emilio)

Details

Attachments

(3 files)

Attached image image.png

STR:

ER:

  • The link text is visible.

AR:

  • The link text is barely visible.
Attached image after.png

This prevents contrast issues with colors that are very similar to the
selection background.

See before / after screenshots. Selection on higher-contrasting
foregrounds still looks good.

This is the alpha channel that e.g., Bugzilla uses on dark mode
(so I didn't just mint it).

Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/05e06b3bbdf9
Use a more transparent color for dark mode / Android selection. r=geckoview-reviewers,owlish
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 96 Branch
Flags: qe-verify+

Reproduced the issue using an affected Nightly build from 2021-11-24.
Verified as fixed on Firefox 96.0b2 (20211207185904) across the following platforms: Windows 10 x64, macOS 10.15 and Ubuntu 20.04.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: